# chatbot_voice

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: main.py
api/v1/: tts_router.py
client/: AudioToText.py  STT.py  client.py  debug.py  debug_audio.raw  debug_log.txt  requiment.txt  robot_voice_system.py  test.py  test1.py  test3.py  test4.py  test5.py  testserrve.py
controller/v1/voice/: tts_controller.py
core/: config.py  connection_manager.py
debug/: a.py  server_sent_audio.raw
services/Voice/: tts_service.py
services/llm/: code_debug_llm.py  gemili.py
utils/: lable_lang.py  lang_detector.py
