[tool.uv]
index-strategy = "unsafe-best-match"
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]
override-dependencies = [
    "nvidia-nccl-cu12; sys_platform == 'linux'",
]
default-groups = ["gpu"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[project]
name = "chatbot_voice"
version = "1.1.5"
description = "Advanced on-device Vietnamese TTS with instant voice cloning"
readme = "README.md"
authors = [
    { name = "Phạm Nguyễn Ngọc Bảo", email = "pnnbao@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "phonemizer>=3.3.0",
    "neucodec>=0.0.4",
    "librosa>=0.11.0",
    "gradio>=5.49.1",
    "onnxruntime>=1.23.2",
    "datasets>=3.2.0",
    "torch",
    "torchaudio",
    "perth>=0.2.0",
    "llama-cpp-python==0.3.16",
    "requests",
    "fastapi>=0.120.2",
    "uvicorn[standard]>=0.38.0",
    "typeguard>=4.4.4",
    "websockets>=15.0.1",
    "python-multipart>=0.0.20",
    "numpy>=2.2.6",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.12.0",
    "scipy>=1.15.3",
    "vieneu",
    "google-generativeai>=0.8.6",
    "sounddevice>=0.5.5",
    "speechrecognition>=3.14.5",
    "pyaudio>=0.2.14",
    "av>=16.1.0",
    "torchcrepe>=0.0.24",
    "langid>=1.1.6",
    "fasttext>=0.9.3",
]

[project.urls]
"Homepage" = "https://github.com/pnnbao97/VieNeu-TTS"
"Bug Tracker" = "https://github.com/pnnbao97/VieNeu-TTS/issues"
"Documentation" = "https://github.com/pnnbao97/VieNeu-TTS/blob/main/README.md"

[project.optional-dependencies]
gpu = [
    "lmdeploy; sys_platform != 'darwin'",
    "triton-windows; sys_platform == 'win32'",
    "triton; sys_platform == 'linux'",
    "transformers; sys_platform == 'darwin'",
    "accelerate; sys_platform == 'darwin'",
]

[dependency-groups]
gpu = [
    "lmdeploy; sys_platform != 'darwin'",
    "triton-windows; sys_platform == 'win32'",
    "triton; sys_platform == 'linux'",
    "transformers; sys_platform == 'darwin'",
    "accelerate; sys_platform == 'darwin'",
]

[tool.setuptools]
packages = ["vieneu", "vieneu_utils"]

[tool.setuptools.package-data]
vieneu_utils = ["*.json"]
vieneu = ["assets/samples/*"]

[tool.uv.sources]

torch = [
    { index = "pytorch", marker = "sys_platform != 'darwin'" },
    { index = "pypi", marker = "sys_platform == 'darwin'" }
]

torchaudio = [
    { index = "pytorch", marker = "sys_platform != 'darwin'" },
    { index = "pypi", marker = "sys_platform == 'darwin'" }
]

lmdeploy = [
    { url = "https://github.com/InternLM/lmdeploy/releases/download/v0.11.0/lmdeploy-0.11.0+cu128-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32' and python_version == '3.12'" },
    { url = "https://github.com/InternLM/lmdeploy/releases/download/v0.11.0/lmdeploy-0.11.0+cu128-cp312-cp312-manylinux2014_x86_64.whl", marker = "sys_platform == 'linux' and python_version == '3.12'" },
    { index = "pypi", marker = "sys_platform == 'darwin'" }
]

llama-cpp-python = [
    { url = "https://github.com/pnnbao97/VieNeu-TTS/releases/download/wheels-v0.3.16/llama_cpp_python-0.3.16-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32' and python_version == '3.12'" },
    { index = "pypi", marker = "sys_platform != 'win32'" }
]
vieneu = { git = "https://github.com/pnnbao97/VieNeu-TTS.git" }
